src/components/Navbar/Navbar.module.css
.nav {
  background-image: linear-gradient(var(--black), var(--carbon));
  height: 100vh;
  min-width: 300px;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: space-between;
  padding: 10px 0px;
}

.upperNav {
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.chatsContainer {
  display: flex;
  flex-direction: column;
  gap: 14px;
  padding: 16px 8px;

  overflow-y: auto;
  height: 100%;
}

.upperNav h1 {
  color: var(--theme);
  padding: 10px;
}

.chatsContainer a:not(.newChatBtn) {
  padding: 8px 12px;
  background-color: var(--gunmetal);
  border-radius: 6px;
  text-decoration: none;
  color: var(--white);
}

.newChatBtn {
  padding: 8px 8px;
  border-radius: 50%;
  border: 2px solid var(--theme);
  background-color: var(--gunmetal);
  align-self: center;
}

.newChatBtn:hover {
  padding: 8px 8px;
  border-radius: 50%;
  border: 2px solid var(--slate);
  background-color: var(--theme);
  align-self: center;
}

.plusIcon {
  height: 36px;
  width: 36px;
}

.chatBtn {
  border: 2px solid;
}

.chatsContainer a.active {
  background-color: var(--carbon);
  box-shadow: 0px 0px 12px var(--theme);
}

